5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4468/executions/1573_1332.log
== TEST (2019-03-28 19:58:10) 
-- CODE:
aresta =5
area = 9
print(45/2)
print(round(, 4))
-- ERROR:
File "XXXX", line 4
    print(round(, 4))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:58:22) 
-- CODE:
aresta =5
area = 9
print(45/2)
print(round(2,3333333, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(2,3333333, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
